:bug: Movendo arquivos para a raiz

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <main class="h-screen w-screen grid grid-cols-1 md:grid-cols-2 grid-rows-6 mt-24">
     <section class="row-span-5 md:flex justify-end hidden ">
-      <img class="w-max-96" src="./img/insta-img.png" alt="Imagem do instagram">
+      <img class="w-max-96" src="./src/img/insta-img.png" alt="Imagem do instagram">
     </section>
     <section class="row-span-5 flex flex-col justify-center items-center grid-cols-1">
       <form class="w-80 flex flex-col justify-center items-center border rounded-sm px-10 py-4 gap-5">
-        <img class="w-52" src="./img/insta-logo.png" alt="Logo do Instagram">
+        <img class="w-52" src="./src/img/insta-logo.png" alt="Logo do Instagram">
           <input class="bg-slate-50 h-9 w-full pl-3 border rounded-sm" placeholder="Número de telefone, e-mail">
           <input class="bg-slate-50 h-9 w-full pl-3 border rounded-sm"  placeholder="Senha">
           <button class="bg-blue-400 w-full rounded-md h-8 text-slate-50 hover:bg-blue-300">Entrar</button>
@@ -26,8 +26,8 @@
       </div>
       <p>Baixe o aplicativo</p>
       <section class="flex gap-2 mt-4">
-        <img class="h-10" src="./img/apple.png" alt="Opção de baixar pela AppStore do IOS">
-        <img class="h-10" src="./img/google.png" alt="Opção de baixar pela AppStore do Android">
+        <img class="h-10" src="./src/img/apple.png" alt="Opção de baixar pela AppStore do IOS">
+        <img class="h-10" src="./src/img/google.png" alt="Opção de baixar pela AppStore do Android">
       </section>
     </section>
     <footer class="row-span-1 col-span-2 mt-16">
